Fixed spacing issue at the top of the box

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,11 @@ h1 {
 }
 
 .box-section {
-	padding-top: 10px;
+	margin-top: 10px;
+}
+
+.box-section:first-child {
+	margin-top: 0;
 }
 
 .signature-field {
